applications/frontend/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: megazone-frontend
  labels:
    app: megazone-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: megazone-frontend
  template:
    metadata:
      name: megazone-frontend
      labels:
        app: megazone-frontend
    spec:
      securityContext:
        fsGroup: 33
      hostAliases:
        - ip: "127.0.0.1"
          hostnames:
            - "php-fpm"
      volumes:
        - name: source-code
          emptyDir: { }
      containers:
        - name: nginx
          image: 337550234746.dkr.ecr.ap-east-1.amazonaws.com/nginx:v0.0.1
          ports:
            - containerPort: 80
              protocol: TCP
              name: http
          securityContext:
            privileged: true
          volumeMounts:
            - mountPath: /source
              name: source-code
          resources:
            requests:
              cpu: 50m
        - name: php-fpm
          image: 337550234746.dkr.ecr.ap-east-1.amazonaws.com/php-fpm:latest
          ports:
            - containerPort: 9000
              protocol: TCP
              name: http
          securityContext:
            privileged: true
          volumeMounts:
            - mountPath: /source
              name: source-code
          resources:
            requests:
              cpu: 200m
      restartPolicy: Always
