applications/frontend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: megazone-frontend
spec:
  selector:
    app: megazone-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
  type: NodePort
